--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
   "scripts": {
     "start": "npx serve -s . -p 8000",
     "dev": "npx serve -s . -p 8000",
-    "lint": "echo 'No linting configured yet'",
-    "test": "echo 'No tests configured yet'"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest __tests__/unit",
+    "test:integration": "jest __tests__/integration",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:all": "npm run lint && npm run test && npm run test:e2e",
+    "lint": "eslint js/**/*.js",
+    "lint:fix": "eslint js/**/*.js --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yourusername/2sdAI-Threading.git"
+    "url": "git+https://github.com/2sdai/threading.git"
   },
   "keywords": [
     "ai",
@@ -27,11 +36,26 @@
   "author": "Your Name",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/yourusername/2sdAI-Threading/issues"
+    "url": "https://github.com/2sdai/threading/issues"
   },
-  "homepage": "https://github.com/yourusername/2sdAI-Threading#readme",
-  "devDependencies": {},
-  "dependencies": {},
+  "homepage": "https://github.com/2sdai/threading#readme",
+  "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@playwright/test": "^1.56.1",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.32.0",
+    "fake-indexeddb": "^5.0.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-localstorage-mock": "^2.4.26",
+    "service-worker-mock": "^2.0.5",
+    "whatwg-fetch": "^3.6.20"
+  },
   "engines": {
     "node": ">=14.0.0"
   }
