--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "test:coverage": "vitest --coverage",
     "test:unit": "vitest run --config vitest.config.js",
     "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:report": "playwright show-report",
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix"
   },
